--- a/style/style.css
+++ b/style/style.css
@@ -278,6 +278,9 @@
 * {
   margin: 0px;
   padding: 0px;
+  transition-property: all;
+  transition-duration: 200ms;
+  transition-timing-function: linear;
 }
 
 a {
@@ -798,7 +801,6 @@ li {
 }
 
 /* header */
-
 
 .how-we-do {
   width: 280px;
@@ -2472,7 +2474,6 @@ li {
   border-color: rgba(255, 255, 255, 1);
   border-style: solid;
   color: #fff;
-
 }
 
 .eight-form-input::-webkit-input-placeholder {
@@ -2496,7 +2497,6 @@ li {
   margin: 0 auto;
 }
 
-
 .eight-form-button {
   width: 250px;
   height: 50px;
@@ -2506,7 +2506,12 @@ li {
   color: rgb(255, 255, 255);
   cursor: pointer;
   letter-spacing: 1.5px;
+}
 
+.eight-form-button:hover {
+  background-color: rgb(255, 255, 255);
+  color: rgb(255, 107, 8);
+  border: 2px solid rgb(255, 107, 8);
 }
 
 .eight-container {
@@ -2527,7 +2532,6 @@ li {
   line-height: 1.86;
   text-align: center;
   margin: 0 auto;
-
 }
 
 .eight-text {
@@ -2576,12 +2580,10 @@ li {
   background-position: top 32px left 22px;
   padding-top: 30px;
   padding-bottom: 25px;
-
 }
 
 .color-orange {
   color: #ff6b08;
-
 }
 
 .eight-logo {
@@ -2602,7 +2604,6 @@ li {
   font-family: "Montserrat";
   font-weight: 800;
   line-height: 10px;
-
 }
 
 .logo-title_adskiy {
@@ -2636,9 +2637,6 @@ li {
   }
 }
 
-
-
-
 @media (min-width: 768px) {
   .eight-container {
     width: 768px;
@@ -2668,7 +2666,6 @@ li {
 
   .eight-form-div {
     width: 400px;
-
   }
 
   .eight-form-input {
@@ -2681,7 +2678,6 @@ li {
     height: 120px;
     align-items: center;
     flex-direction: row;
-
   }
 
   .footer {
@@ -2728,7 +2724,7 @@ li {
   }
 }
 
-@media (min-width:1280px) {
+@media (min-width: 1280px) {
   .eight-container {
     width: 1280px;
     height: 750px;
@@ -2744,7 +2740,6 @@ li {
     font-size: 18px;
     width: 900px;
     text-align: center;
-
   }
 
   .eight-form-div {
